Bonus additions : - Modified the way the Moon is displayed on the Canvas, following its phase (now the drawing should be correct) - Implementing a search functionality to find quickly some CelestialObjects by their name, such that the searched object is displayed in the center of the canvas (if the object is contained in the list of generated CelestialObject) - Showing the names of the Stars from the brightest to the dimmest, with sensitivity to the zoom applied to the canvas